force-app/main/default/objects/Opportunity_Summary__c/Opportunity_Summary__c.object-meta.xml
<CustomObject>
    <label>商談サマリカード</label>
    <pluralLabel>商談サマリカード</pluralLabel>
    <nameField>
        <label>サマリカード名</label>
        <type>AutoNumber</type>
        <displayFormat>OSC-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>商談の中間表現。LLMが商談の関連情報（商品・活動・アカウント）を集約・構造化して生成する。類似商談検索の基盤。</description>
</CustomObject>