force-app/main/default/objects/Opportunity_Summary__c/fields/Activity_Count__c.field-meta.xml
<CustomField>
    <fullName>Activity_Count__c</fullName>
    <label>活動件数</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>