force-app/main/default/objects/Opportunity_Summary__c/fields/Activity_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Activity_Milestones__c</fullName>
    <label>活動マイルストーン</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>