force-app/main/default/objects/Opportunity_Summary__c/fields/Activity_Summary__c.field-meta.xml
<CustomField>
    <fullName>Activity_Summary__c</fullName>
    <label>活動要約</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>