force-app/main/default/objects/Opportunity_Summary__c/fields/Competitive_Situation__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Situation__c</fullName>
    <label>競合状況</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>競合なし</fullName>
            </value>
            <value>
                <fullName>競合あり（優位）</fullName>
            </value>
            <value>
                <fullName>競合あり（拮抗）</fullName>
            </value>
            <value>
                <fullName>競合あり（劣位）</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>