force-app/main/default/objects/Opportunity_Summary__c/fields/Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Score__c</fullName>
    <label>信頼度スコア</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>