force-app/main/default/objects/Opportunity_Summary__c/fields/Customer_Challenge__c.field-meta.xml
<CustomField>
    <fullName>Customer_Challenge__c</fullName>
    <label>顧客課題</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>