force-app/main/default/objects/Opportunity_Summary__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <label>顧客セグメント</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>製造業</fullName>
            </value>
            <value>
                <fullName>エネルギー・ユーティリティ</fullName>
            </value>
            <value>
                <fullName>金融</fullName>
            </value>
            <value>
                <fullName>公共</fullName>
            </value>
            <value>
                <fullName>商社</fullName>
            </value>
            <value>
                <fullName>IT・テクノロジー</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>