force-app/main/default/objects/Opportunity_Summary__c/fields/Deal_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Deal_Narrative__c</fullName>
    <label>商談ストーリー</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>