force-app/main/default/objects/Opportunity_Summary__c/fields/Deal_Scale__c.field-meta.xml
<CustomField>
    <fullName>Deal_Scale__c</fullName>
    <label>案件規模</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>小規模</fullName>
            </value>
            <value>
                <fullName>中規模</fullName>
            </value>
            <value>
                <fullName>大規模</fullName>
            </value>
            <value>
                <fullName>超大規模</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>