force-app/main/default/objects/Opportunity_Summary__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>案件タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>設備導入</fullName>
            </value>
            <value>
                <fullName>ソフトウェア・クラウド</fullName>
            </value>
            <value>
                <fullName>Design Win・OEM</fullName>
            </value>
            <value>
                <fullName>保守・サービス</fullName>
            </value>
            <value>
                <fullName>コンサルティング</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>