force-app/main/default/objects/Opportunity_Summary__c/fields/Decision_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Decision_Complexity__c</fullName>
    <label>意思決定構造</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>単独決裁</fullName>
            </value>
            <value>
                <fullName>委員会・合議</fullName>
            </value>
            <value>
                <fullName>入札</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>