force-app/main/default/objects/Opportunity_Summary__c/fields/Engagement_Depth__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Depth__c</fullName>
    <label>接点の深さ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>深い</fullName>
            </value>
            <value>
                <fullName>中程度</fullName>
            </value>
            <value>
                <fullName>浅い</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>