force-app/main/default/objects/Opportunity_Summary__c/fields/Has_Description__c.field-meta.xml
<CustomField>
    <fullName>Has_Description__c</fullName>
    <label>Description有無</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>