force-app/main/default/objects/Opportunity_Summary__c/fields/Key_Risks__c.field-meta.xml
<CustomField>
    <fullName>Key_Risks__c</fullName>
    <label>主要リスク</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>