force-app/main/default/objects/Opportunity_Summary__c/fields/Key_Stakeholders__c.field-meta.xml
<CustomField>
    <fullName>Key_Stakeholders__c</fullName>
    <label>主要関係者</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>