force-app/main/default/objects/Opportunity_Summary__c/fields/Lessons_Or_Insights__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Or_Insights__c</fullName>
    <label>示唆・教訓</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>