force-app/main/default/objects/Opportunity_Summary__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>商談サマリカード</relationshipLabel>
    <relationshipName>Opportunity_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>