force-app/main/default/objects/Opportunity_Summary__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>商談フェーズ</label>
    <type>Text</type>
    <length>100</length>
</CustomField>