force-app/main/default/objects/Opportunity_Summary__c/fields/Our_Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Our_Value_Proposition__c</fullName>
    <label>提案価値</label>
    <type>LongTextArea</type>
    <length>32000</length>
</CustomField>