force-app/main/default/objects/Opportunity_Summary__c/fields/Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Product_Count__c</fullName>
    <label>商品登録件数</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>