force-app/main/default/objects/Opportunity_Summary__c/fields/Sales_Motion__c.field-meta.xml
<CustomField>
    <fullName>Sales_Motion__c</fullName>
    <label>営業アプローチ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>新規開拓</fullName>
            </value>
            <value>
                <fullName>既存深耕</fullName>
            </value>
            <value>
                <fullName>競合リプレース</fullName>
            </value>
            <value>
                <fullName>紹介・パートナー経由</fullName>
            </value>
            <value>
                <fullName>入札・RFP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>