force-app/main/default/objects/Opportunity_Summary__c/fields/Sales_Process_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Sales_Process_Pattern__c</fullName>
    <label>営業プロセス型</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>技術主導型</fullName>
            </value>
            <value>
                <fullName>関係構築型</fullName>
            </value>
            <value>
                <fullName>PoC主導型</fullName>
            </value>
            <value>
                <fullName>入札対応型</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>