force-app/main/default/objects/Opportunity_Summary__c/fields/Urgency_Driver__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Driver__c</fullName>
    <label>緊急性の動因</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>規制・法令</fullName>
            </value>
            <value>
                <fullName>コスト削減</fullName>
            </value>
            <value>
                <fullName>設備更新・老朽化</fullName>
            </value>
            <value>
                <fullName>事業拡大</fullName>
            </value>
            <value>
                <fullName>事故・障害対応</fullName>
            </value>
            <value>
                <fullName>不明</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>