force-app/main/default/objects/Opportunity_Summary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Customer_Segment__c</columns>
    <columns>Sales_Motion__c</columns>
    <columns>Confidence_Score__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Engagement_Depth__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて</label>
</ListView>