force-app/main/default/objects/Opportunity_Summary__c/listViews/High_Confidence.listView-meta.xml
<ListView>
    <fullName>High_Confidence</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Deal_Type__c</columns>
    <columns>Sales_Motion__c</columns>
    <columns>Competitive_Situation__c</columns>
    <columns>Confidence_Score__c</columns>
    <columns>Product_Count__c</columns>
    <columns>Activity_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Confidence_Score__c</field>
        <operation>greaterOrEqual</operation>
        <value>3</value>
    </filters>
    <label>信頼度 高（3以上）</label>
</ListView>